[package]
name = "aoc"
version = "0.1.0"
authors = ["Francisco Soares <francisco.ssn94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"

[features]
default = [
    "2015",
    "2016",
    "2017",
    "2018",
    "2019",
    "2020"
]
2015 = []
2016 = []
2017 = []
2018 = []
2019 = []
2020 = []
